cluster/bootstrap/cilium/cilium-post-deploy/cilium-visibility.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: visibility
spec:
  endpointSelector:
    matchLabels: {}
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: '*'
  - toPorts:
    - ports:
      - port: "1"
        endPort: 52
        protocol: ANY
  - toPorts:
    - ports:
      - port: "54"
        endPort: 65535
        protocol: ANY
  - toFQDNs:
    - matchPattern: '*'
  - toEntities:
    - cluster
    - world
